--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,8 @@
   },
   "require": {
     "php": "8.3",
-    "ext-pdo": "*",
-    "ext-memcached": "*",
-    "ext-redis": "*",
-    "ext-mongodb": "*",
     "mongodb/mongodb": "^1.0@dev",
-    "ext-apcu": "*"
+    "php-amqplib/php-amqplib": "^3.6",
+    "twig/twig": "3.0"
   }
 }
