--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "vendor_name/mvc",
+  "name": "kinocheck/api",
   "description": "description",
   "minimum-stability": "dev",
   "license": "proprietary",
@@ -24,6 +24,6 @@
     "php": "8.3",
     "mongodb/mongodb": "^1.0@dev",
     "php-amqplib/php-amqplib": "^3.6",
-    "twig/twig": "3.0"
+    "phpmailer/phpmailer": "^6.9.1"
   }
 }
